// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game play integration test final game summary:  summary 1`] = `
<table
  aria-label="result-table"
  class="MuiTable-root css-1puexzi-MuiTable-root"
>
  <thead
    class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
  >
    <tr
      class="MuiTableRow-root MuiTableRow-head css-1pgphf0-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-gvmp1b-MuiTableCell-root"
        scope="col"
      >
        Name
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall css-w5jrf1-MuiTableCell-root"
        scope="col"
      >
        Total Score
      </th>
    </tr>
  </thead>
  <tbody
    class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
  >
    <tr
      class="MuiTableRow-root css-1pgphf0-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-13rbi0f-MuiTableCell-root"
        scope="row"
      >
        Player 1
      </th>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall css-d5rns7-MuiTableCell-root"
      >
        64
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Game play integration test round 1/2 summary: info table 1`] = `
Array [
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-13v49lt-MuiListItem-root"
  >
    <div
      class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-126dpoc-MuiTypography-root"
      >
        Panorama description
      </span>
      <p
        class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-14laof0-MuiTypography-root"
      >
        Fake panorama description
      </p>
    </div>
  </li>,
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-13v49lt-MuiListItem-root"
  >
    <div
      class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-126dpoc-MuiTypography-root"
      >
        Coordinates (lat/lng)
      </span>
      <p
        class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-14laof0-MuiTypography-root"
      >
        0, 
            0
      </p>
    </div>
  </li>,
]
`;

exports[`Game play integration test round 1/2 summary: summary screen 1`] = `
<table
  class="MuiTable-root css-1puexzi-MuiTable-root"
>
  <thead
    class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
  >
    <tr
      class="MuiTableRow-root MuiTableRow-head css-1pgphf0-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-gvmp1b-MuiTableCell-root"
        scope="col"
      >
        Name
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall css-w5jrf1-MuiTableCell-root"
        scope="col"
      >
        Distance
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall css-w5jrf1-MuiTableCell-root"
        scope="col"
      >
        Score
      </th>
    </tr>
  </thead>
  <tbody
    class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
  >
    <tr
      class="MuiTableRow-root css-1pgphf0-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-13rbi0f-MuiTableCell-root"
        scope="row"
      >
        Player 1
      </th>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall css-d5rns7-MuiTableCell-root"
      >
        157.25 km
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall css-d5rns7-MuiTableCell-root"
      >
        64
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Game play integration test round 2/2 ends after time runs out: summary 1`] = `
<table
  class="MuiTable-root css-1puexzi-MuiTable-root"
>
  <thead
    class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
  >
    <tr
      class="MuiTableRow-root MuiTableRow-head css-1pgphf0-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-gvmp1b-MuiTableCell-root"
        scope="col"
      >
        Name
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall css-w5jrf1-MuiTableCell-root"
        scope="col"
      >
        Distance
      </th>
      <th
        class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall css-w5jrf1-MuiTableCell-root"
        scope="col"
      >
        Score
      </th>
    </tr>
  </thead>
  <tbody
    class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
  >
    <tr
      class="MuiTableRow-root css-1pgphf0-MuiTableRow-root"
    >
      <th
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-13rbi0f-MuiTableCell-root"
        scope="row"
      >
        Player 1
      </th>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall css-d5rns7-MuiTableCell-root"
      >
        -
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall css-d5rns7-MuiTableCell-root"
      >
        0
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Game play integration test searches panorama and does not find one first: intermission screen 1`] = `
Array [
  <h4
    class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter css-149xwtl-MuiTypography-root"
  >
    Player 1
    , it's your turn!
  </h4>,
  <h6
    class="MuiTypography-root MuiTypography-h6 css-13nzsfx-MuiTypography-root"
  >
    Round 
    1
    /
    2
  </h6>,
]
`;
